Adapting biosphere
Terrain ownership and dimension slot control:
- BeyondTerrainState tracks whether Beyond's biome source decoded this session
- MultiPackResourceManagerMixin wraps foreign packs to hide contested dimension/the_end.json
  and dimension_type/the_end.json, letting Beyond win the slot while foreign biomes/features pass through
- EndDimensionFilteringPackResources is the transparent PackResources wrapper that hides only those two files
- PackRepositoryMixin auto-enables beyond_terrain datapack on fresh world creation
- Soup-mode fallback preserved: when Beyond's pack is disabled, no wrapping occurs

Biome source and chunk generator:
- BeyondEndBiomeSource expanded with runtime biome injection via injectBiomesIntoTaintedPool
- EndBiomeDiscovery auto-discovers End biomes from #minecraft:is_end, #c:is_end_biome, and
  #wover:is_end/* tags at server start
- BeyondEndChunkGenerator restructured with duo-region architecture
- SurfaceRuleMerger expanded for controlled surface rule merging from foreign mods
- TheEndBiomeSourceMixin updated for Beyond's biome source integration

Wover/BetterX compatibility:
- WoverChunkGeneratorMixin prevents Wover from replacing Beyond's chunk generator at dimension-load
- WoverSurfaceRuleUtilMixin cancels Wover's surface rule injection for the End when Beyond is active,
  preventing foreign biome rules from overwriting Beyond's noise settings

BetterEnd compatibility:
- BetterEndGeneratorOptionsMixin forces replacePortal, replacePillars, and hasCentralIsland to false
  when Stellarity is also loaded, ceding central-island ownership to Stellarity
- Separate mixin config (the_beyond_betterend_compat.mixins.json) with defaultRequire: 0

Stellarity compatibility:
- SpikeFeatureStellarityCompatMixin overrides getSpikesForLevel to return Stellarity's hardcoded
  10-spike ring, fixing dragon fight crystal scanning and respawn pillar positioning
- SpikeFeaturePlacementStellarityMixin redirects placeSpike to use vanilla absolute-Y sema